# mailguard-ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/: styles.css
models/: metrics.json  model.safetensors  vocab.json
notebooks/: train_colab.ipynb
src/: __init__.py  config.py  inference.py  prepare_data.py  preprocessing.py  train.py  transformer_model.py
tests/: test_model.py  test_preprocessing.py  test_training_step.py
